# rss-glib

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  rss-glib.pc.in
bindings/: Makefile.am
bindings/mono/: AssemblyInfo.cs.in  Global.cs  Makefile.am  rss-glib-sharp-1.0.pc.in  rss-glib-sharp.dll.config.in  rss-glib-sharp.snk  rss-glib.api  rss-glib.metadata  rss-glib.raw  rss-glib.sources
bindings/python/: Makefile.am  rss.defs  rss.override  rssmodule.c
bindings/vala/: Makefile.am  rss-glib-1.0.vapi
debian/: changelog  control.in  copyright  librss-glib-1.0-0.install  librss-glib-1.0-0.symbols  librss-glib-dev.install  librss-glib-doc.install  rules  watch
doc/reference/: Makefile.am
doc/reference/rss-glib/: Makefile.am  rss-glib-docs.sgml
examples/: Makefile.am  console-c.c  console-mono.cs  console-python.py  console-vala.vala
rss-glib/: Makefile.am  rss-document-private.h  rss-document.c  rss-document.h  rss-glib.h  rss-item-private.h  rss-item.c  rss-item.h  rss-parser-private.h  rss-parser.c  rss-parser.h  rss-version.h.in
tests/: Makefile.am  atom.xml  rss.xml  test-01.c
vala/: Makefile.am  rss-glib-1.0.vapi  rss-test.vala
